--- a/deployment/uwsgi.ini
+++ b/deployment/uwsgi.ini
@@ -9,7 +9,7 @@ endif =
 if-not-env = TRACKER
 module = streisand.www_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
-static-map /static=/code/src/staticfiles
+static-map = /static=/code/src/staticfiles
 endif =
 
 master = True
