--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ FROM node
 
 WORKDIR /code
 
-COPY package*.json .
+COPY package*.json ./
 RUN npm install
 ENV PATH="/code/node_modules/.bin:$PATH"
 EXPOSE 3000
