Turns out alpine has no bash. This might work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,8 +50,9 @@ release_develop:
   stage: release
   before_script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.ronzertnert.me
+    - apk install bash
   script:
-    - bash deployment/docker_build.sh $CONTAINER_DEVELOP_IMAGE
+    - deployment/docker_build.sh $CONTAINER_DEVELOP_IMAGE
     - docker push $CONTAINER_DEVELOP_IMAGE
 #   only:
 #     - develop
