--- a/deployment/uwsgi.ini
+++ b/deployment/uwsgi.ini
@@ -15,5 +15,5 @@ endif =
 master = True
 pidfile = /tmp/jumpcut-master.pid
 vacuum = True
-socker = 0.0.0.0:80
+socket = 0.0.0.0:80
 max-requests = 5000
