--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,5 +43,5 @@ https://github.com/philipn/django-rest-framework-filters/archive/master.zip
 https://github.com/darklow/django-suit/tarball/v2
 djangorestframework-jwt>=1.11.0
 drf-yasg>=1.6.1
-graphene 
+graphene==2.1
 graphene-django>=2.0.dev
