Update uwsgi.ini to use tmp sockets

--- a/deployment/uwsgi.ini
+++ b/deployment/uwsgi.ini
@@ -15,5 +15,5 @@ endif =
 master = True
 pidfile = /tmp/jumpcut-master.pid
 vacuum = True
-socket = 0.0.0.0:80
+socket = /tmp/uwsgi.sock
 max-requests = 5000
