--- a/deployment/uwsgi.ini
+++ b/deployment/uwsgi.ini
@@ -12,8 +12,8 @@ env = DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
 static-map = /static=/code/src/staticfiles
 endif =
 
-master = True
-pidfile = /tmp/jumpcut-master.pid
-vacuum = True
-socket = :80
-max-requests = 5000
+http-socket = :8000
+master = 1
+processes = 4
+threads = 2
+enable-threads = True
