test this for now

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -17,6 +17,7 @@ COPY deployment/frontend_out src/static/app/dist
 RUN src/manage.py collectstatic -c --noinput
 RUN src/manage.py makemigrations users
 RUN src/manage.py makemigrations
+RUN src/manage.py migrate
 
 EXPOSE 80
 CMD ["/usr/local/bin/uwsgi", "--ini", "/code/uwsgi.ini", "--die-on-term"]
