--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -19,5 +19,6 @@ RUN src/manage.py makemigrations users
 RUN src/manage.py makemigrations
 RUN src/manage.py migrate
 
-EXPOSE 80
-CMD ["/usr/local/bin/uwsgi", "--ini", "/code/uwsgi.ini", "--die-on-term"]
+EXPOSE 8000 7070
+CMD ["/usr/local/bin/uwsgi", "--ini", "/code/www_uwsgi.ini", "--die-on-term"]
+CMD ["/usr/local/bin/uwsgi", "--ini", "/code/tracker_uwsgi.ini", "--die-on-term"]
