--- a/deployment/uwsgi/www_uwsgi.ini
+++ b/deployment/uwsgi/www_uwsgi.ini
@@ -6,7 +6,7 @@ module = streisand.www_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
 static-map = /static=/code/src/staticfiles
 
-http-socket = :8000
+socket = :8000
 master = 1
 processes = 4
 threads = 2
