--- a/deployment/uwsgi/tracker_uwsgi.ini
+++ b/deployment/uwsgi/tracker_uwsgi.ini
@@ -4,9 +4,8 @@ chdir = /code/src
 module = streisand.tracker_wsgi:application
 env = DJANGO_SETTINGS_MODULE=streisand.settings.tracker_settings
 
-
-http-socket = :7070
+socket = :7070
 master = 1
-processes = 4
+processes = 1
 threads = 2
 enable-threads = True
