Update www_uwsgi.ini test container updates

--- a/deployment/uwsgi/www_uwsgi.ini
+++ b/deployment/uwsgi/www_uwsgi.ini
@@ -1,13 +1,38 @@
 [uwsgi]
 
-chdir = /code/src
+chdir = /code/
+
+uid = uwsgi
+gid = uwsgi
+master = true
+
+# %k is detected cpu cores 
+processes = %(%k * 2 + 1)
+harakiri = 120
+cpu-affinity = 1
+vacuum = 1
+optimize = 2
+
+socket = 0.0.0.0:8000
+#stats = 0.0.0.0:9001
+
+daemonize = /var/log/uwsgi.log
+
+# 8MB
+post-buffering = 8192
+buffer-size = 32768
+
+# %d is the dir this configuration file is in.
+pythonpath=%dsrc
+chdir = %dsrc
+
+# load the module from wsgi.py, it is a python path from 
+# the directory above. 
+# app/website/wsgi.py
 
 module = streisand.www_wsgi:application
+
 env = DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
 static-map = /static=/code/src/staticfiles
 
-socket = :8000
-master = 1
-processes = 4
-threads = 2
-enable-threads = True
+module = streisand.www_wsgi:application
