--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -4,19 +4,27 @@ FROM python:3.6
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        postgresql-client netcat \
+        postgresql-client netcat screen vim \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /code
 COPY backend/requirements.txt ./
+
 RUN pip install -r requirements.txt
 
 COPY deployment/uwsgi ./uwsgi
 COPY backend .
+
+
 COPY deployment/frontend_out src/static/app/dist
 RUN src/manage.py collectstatic -c --noinput
 RUN src/manage.py makemigrations users
 RUN src/manage.py makemigrations
 
+RUN export PYTHONPATH=$PYTHONPATH:/code/src
+RUN export DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
+
 EXPOSE 8000 7070
+ENV       PYTHONPATH /code/src
+ENV       DJANGO_SETTINGS_MODULE streisand.settings.www_settings
 CMD ["/usr/local/bin/uwsgi", "--emperor", "/code/uwsgi", "--die-on-term"]
