--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,16 @@ python:
     - "3.6"
 env:
   - DJANGO=2.0.4
+  
 install:
-    - "cd backend"
-    - "pip install -r requirements.txt"
-    - "pip install -r testing_requirements.txt"
-    - "pip install coveralls"
+    - "pip install -r backend/requirements.txt"
+    - "pip install -r backend/testing_requirements.txt"
+    - "pip install coverage"
 script:
-    - "flake8 src/"
-    - "./src/manage.py makemigrations"
-    - "./src/manage.py migrate"
-    - "coverage run ./src/manage.py test -v 3"
+    - "flake8 ./backend/src/"
+    - "./backend/src/manage.py makemigrations"
+    - "./backend/src/manage.py migrate"
+    - "coverage run ./backend/src/manage.py test -v 3"
 after_success:
     - coverage report -m
  
