--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,20 @@ sudo: false
 language: python
 cache: pip
 python:
-    - "3.4"
-    - "3.5"
-    - "3.6"
+  - "3.6"
 env:
   - DJANGO=2.0.4
   
 install:
-    - "pip install -r backend/requirements.txt"
-    - "pip install -r backend/testing_requirements.txt"
-    - "pip install coverage"
+    - "pip install -r ./backend/requirements.txt"
+    - "pip install -r ./backend/testing_requirements.txt"
+
 script:
-    - "flake8 ./backend/src/"
-    - "./backend/src/manage.py makemigrations"
-    - "./backend/src/manage.py migrate"
-    - "coverage run ./backend/src/manage.py test -v 3"
+  - "flake8 backend"
+  - "backend/src/manage.py makemigrations"
+  - "backend/src/manage.py migrate"
+  - "coverage run backend/src/manage.py test backend/src"
+
 after_success:
-    - coverage report -m
+    - coverage report -m 
  
