update coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: false
 language: python
 cache: pip
 python:
-  - "3.6"
+    - "3.4"
+    - "3.5"
+    - "3.6"
 env:
   - DJANGO=2.0.4
   
@@ -17,5 +19,5 @@ script:
   - "coverage run backend/src/manage.py test backend/src"
 
 after_success:
-    - coverage report -m 
+    - coverage report backend/src -m 
  
