--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/node": "^8.0.0",
     "@types/object-assign": "^4.0.30",
     "@types/promise": "^7.1.30",
     "@types/react": "^16.0.18",
