Combine layers in prod Dockerfile

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -15,16 +15,15 @@ RUN pip install -r requirements.txt
 COPY deployment/uwsgi ./uwsgi
 COPY backend .
 
-
 COPY deployment/frontend_out src/static/app/dist
-RUN src/manage.py collectstatic -c --noinput
-RUN src/manage.py makemigrations users
-RUN src/manage.py makemigrations
-
-RUN export PYTHONPATH=$PYTHONPATH:/code/src
-RUN export DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
+RUN src/manage.py collectstatic -c --noinput \
+ && src/manage.py makemigrations users \
+ && src/manage.py makemigrations \
+ && export PYTHONPATH=$PYTHONPATH:/code/src \
+ && export DJANGO_SETTINGS_MODULE=streisand.settings.www_settings
 
 EXPOSE 8000 7070
-ENV       PYTHONPATH /code/src
-ENV       DJANGO_SETTINGS_MODULE streisand.settings.www_settings
+ENV PYTHONPATH /code/src
+ENV DJANGO_SETTINGS_MODULE streisand.settings.www_settings
+
 CMD ["/usr/local/bin/uwsgi", "--emperor", "/code/uwsgi", "--die-on-term"]
