--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -16,8 +16,7 @@ COPY deployment/uwsgi ./uwsgi
 COPY backend .
 
 COPY deployment/frontend_out/bundle.js src/static/frontend/dist/
-COPY deployment/frontend_out/bundle.js.map
-src/static/frontend/dist/
+COPY deployment/frontend_out/bundle.js.map src/static/frontend/dist/
 COPY deployment/frontend_out/index.html src/static/frontend/index.html
 
 RUN src/manage.py collectstatic -c --noinput \
