--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ release_develop:
   image: docker:stable
   stage: release
   before_script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.ronzertnert.me
+    - docker login -u gitlab-ci-token -p $CI_PASS registry.ronzertnert.me
   script:
     - deployment/docker_build.sh $CONTAINER_DEVELOP_IMAGE
     - docker push $CONTAINER_DEVELOP_IMAGE
