--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,6 @@ stages:
 
 
 variables:
-  CONTAINER_DEVELOP_IMAGE: registry.ronzertnert.me/jumpcut/jumpcut:$CI_COMMIT_REF_NAME
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache"
   DATABASE_URL: "postgres://postgres:postgres@postgres:5432/ci"
   STREISAND_DEBUG: "True"
@@ -49,17 +48,17 @@ release_develop:
   image: docker:stable
   stage: release
   before_script:
-    - docker login -u gitlab-ci-token -p $CI_PASS registry.ronzertnert.me
+    - docker login -u gitlab-ci-token -p $CI_PASS $CI_REGISTRY
   script:
-    - deployment/docker_build.sh $CONTAINER_DEVELOP_IMAGE
-    - docker push $CONTAINER_DEVELOP_IMAGE
+    - deployment/docker_build.sh $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
   only:
     - master
  
 # deploy-develop:
 #   stage: deploy
 #   before_script:
-#     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.ronzertnert.me
+#     - docker login -u gitlab-ci-token -p $CI_PASS $CI_REGISTRY
 #   script:
 #     - echo hi # will be the deploy script
 #   only:
